[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
tensorflow = "^2.16.1"
ipython = "^8.25.0"
ipykernel = "^6.29.4"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
scipy = "^1.14.0"
scikit-learn = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
